# flight-booking-agent

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  entrypoint.sh  healthcheck.py  pyproject.toml  requirements-dev.txt  requirements.txt
app/: agent.py  config.py  flights.py  main.py  models.py
flight_booking/: __init__.py  __main__.py  agent.py  amadeus_client.py  api.py  main.py  models.py  presentations.py  receipts.py  search.py  tools.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: Chat.jsx  DocumentModal.jsx  Sidebar.jsx
tests/: conftest.py  test_agent.py  test_amadeus_client.py  test_api.py  test_models.py  test_presentations.py  test_receipts.py  test_search.py  test_tools.py
