[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "flight-booking-agent"
version = "1.0.0"
description = "An interactive flight booking agent that finds real flights via the Amadeus API"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
flight-agent = "flight_booking.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
