[project]
name = "flight-booking-agent"
dynamic = ["version"]
description = "Flight booking agent REST API with conversational AI"
requires-python = ">=3.12"
license = "MIT"

[project.urls]
Repository = "https://github.com/kondalaraogangavarapu/flight-booking-agent"

[tool.setuptools.dynamic]
version = {file = "VERSION"}
